some updates to the sensitivies, and questions about what fiducial RGHJ to use

--- a/code/estimate_table_values.ipynb
+++ b/code/estimate_table_values.ipynb
@@ -291,6 +291,7 @@
        "      <th>theta_res_asec</th>\n",
        "      <th>rms_uJy</th>\n",
        "      <th>Tint_20uJy</th>\n",
+       "      <th>Tint_80uJy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -306,6 +307,7 @@
        "      <td>16.49</td>\n",
        "      <td>162.35</td>\n",
        "      <td>65.89</td>\n",
+       "      <td>4.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -319,6 +321,7 @@
        "      <td>1030.64</td>\n",
        "      <td>869.72</td>\n",
        "      <td>1891.03</td>\n",
+       "      <td>118.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -332,6 +335,7 @@
        "      <td>10.31</td>\n",
        "      <td>1207.99</td>\n",
        "      <td>3648.10</td>\n",
+       "      <td>228.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -345,6 +349,7 @@
        "      <td>4.12</td>\n",
        "      <td>189.27</td>\n",
        "      <td>89.56</td>\n",
+       "      <td>5.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -358,6 +363,7 @@
        "      <td>10.31</td>\n",
        "      <td>58294.91</td>\n",
        "      <td>8495741.33</td>\n",
+       "      <td>530983.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -371,6 +377,7 @@
        "      <td>1030.64</td>\n",
        "      <td>29204.78</td>\n",
        "      <td>2132297.94</td>\n",
+       "      <td>133268.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -384,6 +391,7 @@
        "      <td>7.61</td>\n",
        "      <td>7.80</td>\n",
        "      <td>0.15</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -397,6 +405,7 @@
        "      <td>4.76</td>\n",
        "      <td>2.20</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -410,6 +419,7 @@
        "      <td>28.63</td>\n",
        "      <td>3345.20</td>\n",
        "      <td>27975.91</td>\n",
+       "      <td>1748.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -423,6 +433,7 @@
        "      <td>8.59</td>\n",
        "      <td>92.35</td>\n",
        "      <td>21.32</td>\n",
+       "      <td>1.33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -441,17 +452,17 @@
        "8     vla-4band         25.0           36000            29    60   \n",
        "9      vla-lobo         25.0           36000            29   200   \n",
        "\n",
-       "   bandwidth_MHz  T_rx  theta_res_asec   rms_uJy  Tint_20uJy  \n",
-       "0             50   200           16.49    162.35       65.89  \n",
-       "1             50   260         1030.64    869.72     1891.03  \n",
-       "2             50   500           10.31   1207.99     3648.10  \n",
-       "3             90    60            4.12    189.27       89.56  \n",
-       "4             50   260           10.31  58294.91  8495741.33  \n",
-       "5             50   260         1030.64  29204.78  2132297.94  \n",
-       "6            150    60            7.61      7.80        0.15  \n",
-       "7            300    60            4.76      2.20        0.01  \n",
-       "8             50   260           28.63   3345.20    27975.91  \n",
-       "9            300    60            8.59     92.35       21.32  "
+       "   bandwidth_MHz  T_rx  theta_res_asec   rms_uJy  Tint_20uJy  Tint_80uJy  \n",
+       "0             50   200           16.49    162.35       65.89        4.12  \n",
+       "1             50   260         1030.64    869.72     1891.03      118.19  \n",
+       "2             50   500           10.31   1207.99     3648.10      228.01  \n",
+       "3             90    60            4.12    189.27       89.56        5.60  \n",
+       "4             50   260           10.31  58294.91  8495741.33   530983.83  \n",
+       "5             50   260         1030.64  29204.78  2132297.94   133268.62  \n",
+       "6            150    60            7.61      7.80        0.15        0.01  \n",
+       "7            300    60            4.76      2.20        0.01        0.00  \n",
+       "8             50   260           28.63   3345.20    27975.91     1748.49  \n",
+       "9            300    60            8.59     92.35       21.32        1.33  "
       ]
      },
      "execution_count": 4,
@@ -480,6 +491,7 @@
     "    observatory_data.loc[ii, 'theta_res_asec'] = round(theta_asec,2)\n",
     "    observatory_data.loc[ii, 'rms_uJy'] = round(rms_uJy(this_observatory, DURATION),2)\n",
     "    observatory_data.loc[ii, 'Tint_20uJy'] = round((observatory_data.loc[ii, 'rms_uJy']/20.)**2,2)\n",
+    "    observatory_data.loc[ii, 'Tint_80uJy'] = round((observatory_data.loc[ii, 'rms_uJy']/80.)**2,2)\n",
     "    observatories[observatory] = this_observatory\n",
     "#observatories\n",
     "observatory_data"
@@ -582,7 +594,7 @@
    "source": [
     "def confusion_uJy(observatory, nu):\n",
     "    bmax = observatory['max_baseline_m'] # in m\n",
-    "    answer_mJy = 1393. * (nu / 70e6)**(-2.7) * (bmax / 1000)**(-2)\n",
+    "    answer_mJy = 1393./5.0 * (nu / 70e6)**(-2.7) * (bmax / 1000)**(-2)\n",
     "    answer_uJy = answer_mJy * 1000.\n",
     "    return answer_uJy"
    ]
@@ -599,7 +611,7 @@
     "    bmax = observatory['max_baseline_m'] # in m\n",
     "    theta = c/(nu*bmax)\n",
     "    theta_amin = theta * 180. * 60. / np.pi\n",
-    "    answer_mJy = 5.0 * 2.2 * (nu / 1000e6)**(-0.7) * (theta_amin)**(10./3.)\n",
+    "    answer_mJy = 2.2 * (nu / 1000e6)**(-0.7) * (theta_amin)**(10./3.)\n",
     "    answer_uJy = answer_mJy * 1000.\n",
     "    return answer_uJy"
    ]
@@ -629,6 +641,7 @@
        "      <th>theta_res_asec</th>\n",
        "      <th>rms_uJy</th>\n",
        "      <th>Tint_20uJy</th>\n",
+       "      <th>Tint_80uJy</th>\n",
        "      <th>conf_uJy_per_beam</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -645,7 +658,8 @@
        "      <td>16.49</td>\n",
        "      <td>162.35</td>\n",
        "      <td>65.89</td>\n",
-       "      <td>284.701</td>\n",
+       "      <td>4.12</td>\n",
+       "      <td>56.940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -659,7 +673,8 @@
        "      <td>1030.64</td>\n",
        "      <td>869.72</td>\n",
        "      <td>1891.03</td>\n",
-       "      <td>2112065.820</td>\n",
+       "      <td>118.19</td>\n",
+       "      <td>422413.164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -673,7 +688,8 @@
        "      <td>10.31</td>\n",
        "      <td>1207.99</td>\n",
        "      <td>3648.10</td>\n",
-       "      <td>211.207</td>\n",
+       "      <td>228.01</td>\n",
+       "      <td>42.241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -687,7 +703,8 @@
        "      <td>4.12</td>\n",
        "      <td>189.27</td>\n",
        "      <td>89.56</td>\n",
-       "      <td>5.515</td>\n",
+       "      <td>5.60</td>\n",
+       "      <td>1.103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -701,7 +718,8 @@
        "      <td>10.31</td>\n",
        "      <td>58294.91</td>\n",
        "      <td>8495741.33</td>\n",
-       "      <td>211.207</td>\n",
+       "      <td>530983.83</td>\n",
+       "      <td>42.241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -715,7 +733,8 @@
        "      <td>1030.64</td>\n",
        "      <td>29204.78</td>\n",
        "      <td>2132297.94</td>\n",
-       "      <td>2112065.820</td>\n",
+       "      <td>133268.62</td>\n",
+       "      <td>422413.164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -729,7 +748,8 @@
        "      <td>7.61</td>\n",
        "      <td>7.80</td>\n",
        "      <td>0.15</td>\n",
-       "      <td>48.361</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>9.672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -743,7 +763,8 @@
        "      <td>4.76</td>\n",
        "      <td>2.20</td>\n",
        "      <td>0.01</td>\n",
-       "      <td>7.265</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -757,7 +778,8 @@
        "      <td>28.63</td>\n",
        "      <td>3345.20</td>\n",
        "      <td>27975.91</td>\n",
-       "      <td>1629.680</td>\n",
+       "      <td>1748.49</td>\n",
+       "      <td>325.936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -771,7 +793,8 @@
        "      <td>8.59</td>\n",
        "      <td>92.35</td>\n",
        "      <td>21.32</td>\n",
-       "      <td>52.069</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>10.414</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -790,29 +813,29 @@
        "8     vla-4band         25.0           36000            29    60   \n",
        "9      vla-lobo         25.0           36000            29   200   \n",
        "\n",
-       "   bandwidth_MHz  T_rx  theta_res_asec   rms_uJy  Tint_20uJy  \\\n",
-       "0             50   200           16.49    162.35       65.89   \n",
-       "1             50   260         1030.64    869.72     1891.03   \n",
-       "2             50   500           10.31   1207.99     3648.10   \n",
-       "3             90    60            4.12    189.27       89.56   \n",
-       "4             50   260           10.31  58294.91  8495741.33   \n",
-       "5             50   260         1030.64  29204.78  2132297.94   \n",
-       "6            150    60            7.61      7.80        0.15   \n",
-       "7            300    60            4.76      2.20        0.01   \n",
-       "8             50   260           28.63   3345.20    27975.91   \n",
-       "9            300    60            8.59     92.35       21.32   \n",
+       "   bandwidth_MHz  T_rx  theta_res_asec   rms_uJy  Tint_20uJy  Tint_80uJy  \\\n",
+       "0             50   200           16.49    162.35       65.89        4.12   \n",
+       "1             50   260         1030.64    869.72     1891.03      118.19   \n",
+       "2             50   500           10.31   1207.99     3648.10      228.01   \n",
+       "3             90    60            4.12    189.27       89.56        5.60   \n",
+       "4             50   260           10.31  58294.91  8495741.33   530983.83   \n",
+       "5             50   260         1030.64  29204.78  2132297.94   133268.62   \n",
+       "6            150    60            7.61      7.80        0.15        0.01   \n",
+       "7            300    60            4.76      2.20        0.01        0.00   \n",
+       "8             50   260           28.63   3345.20    27975.91     1748.49   \n",
+       "9            300    60            8.59     92.35       21.32        1.33   \n",
        "\n",
        "   conf_uJy_per_beam  \n",
-       "0            284.701  \n",
-       "1        2112065.820  \n",
-       "2            211.207  \n",
-       "3              5.515  \n",
-       "4            211.207  \n",
-       "5        2112065.820  \n",
-       "6             48.361  \n",
-       "7              7.265  \n",
-       "8           1629.680  \n",
-       "9             52.069  "
+       "0             56.940  \n",
+       "1         422413.164  \n",
+       "2             42.241  \n",
+       "3              1.103  \n",
+       "4             42.241  \n",
+       "5         422413.164  \n",
+       "6              9.672  \n",
+       "7              1.453  \n",
+       "8            325.936  \n",
+       "9             10.414  "
       ]
      },
      "execution_count": 7,
@@ -837,6 +860,15 @@
     "                confusion_uJy_highres(this_observatory,nu=this_nu),3)\n",
     "observatory_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
