--- a/ms.tex
+++ b/ms.tex
@@ -172,21 +172,20 @@ We find that RGHJs might be as bright as canonical hot Jupiters as predicted so 
 
 
 Planets with strong magnetic fields may generate radio or X-ray emission when interacting with energetic charged particles. 
-It has been known that Jupiter emits radio wave from the auroral region due to cyclotron-maser instability \citep{zarka1998}.  % due to the acceleration of the plasmas. \memoYF{?}.
+It is well known that Jupiter emits radio waves from its auroral region due to the cyclotron-maser instability \citep{zarka1998}.  % due to the acceleration of the plasmas. \memoYF{?}.
 Potentially, exoplanets can also generate radio emission through similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
-Observations of radio emission from Solar System planets imply an empirical relation that the radio intensity is proportional to the input solar wind flux going into each planetary magnetosphere, which is known as  ``radiometric Bode's law'' \citep{desch+kaiser1984}. 
-Extrapolating this law to exoplanets, radio emission from exoplanetary system has been estimated \citep{farrell1999,zarka2001,lazio2004,griesmeier2004,griesmeier2005,stevens2005,griesmeier2007a,griesmeier2007b,jardine2008,reiners2010}. \memoYF{in more detail}
-%Based on this law, it has been proposed that exoplanets in close-in orbits may be bright radio wave emitters because they are subjected to strong stellar wind and/or strong interstellar magnetic field, and thus can gain larger energy input. Motivated by such speculations, spectral radio intensity from known exoplanets have been estimated  \citep{farrell1999,zarka2001,lazio2004,griesmeier2004,griesmeier2007a,griesmeier2007b,jardine2008,reiners2010,}. 
-In addition, young planetary systems where the stellar wind activity is stronger are also taken into consideration \citep{griesmeier2005}. 
-Although the observational search for these radio signatures are underway, there is no clear detection claimed so far
-\citep{bastian2000,george2007,stroe2012,hallinan2013,murphy2015}, 
-while some indications have been obtained \citep{lecavelier_et_al2013,sirothia2014}. 
+Observations of radio emission from Solar System planets imply an empirical relation that the radio intensity is proportional to the input solar wind flux going into each planetary magnetosphere, which is commonly referred to as the ``radiometric Bode's law'' \citep{desch+kaiser1984}. 
+Extrapolating this scaling to exoplanets, radio emission from exoplanetary systems have been estimated \citep{farrell1999,zarka2001,lazio2004,griesmeier2004,griesmeier2005,stevens2005,griesmeier2007a,griesmeier2007b,jardine2008,reiners2010}. \memoYF{in more detail}
+%Based on this law, it has been proposed that exoplanets in close-in orbits may be bright radio wave emitters because they are subjected to strong stellar wind and/or strong interstellar magnetic field, and thus can gain larger energy input. Motivated by such speculations, spectral radio intensity from known exoplanets have been estimated  \citep{farrell1999,zarka2001,lazi o2004,griesmeier2004,griesmeier2007a,griesmeier2007b,jardine2008,reiners2010,}. 
+In addition, young planetary systems where stellar wind activity is strong have also been considered \citep{griesmeier2005}. 
+Although observational searches for these radio signatures are underway, no clear detection has been claimed \citep{bastian2000,george2007,stroe2012,hallinan2013,murphy2015}, 
+though there are some promising intial results \citep{lecavelier_et_al2013,sirothia2014}. 
 
 When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
-they go through stages on the red-giant branch (RGB) and the
-asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
-Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass; such planets are termed ``Red Giant Hot Jupiters'' (RGHJs) \citep{spiegel+madhusudhan2012}. 
-They are also subject to a massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significant, ranging from $\sim  10^{-8} M_\odot$/yr to $\sim  10^{-5} M_\odot$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, much higher than that of the Sun, $\sim 10^{-14}M_\odot$/yr . 
+they evolve through the red-giant branch (RGB) and the
+asymptotic-giant branch (AGB) phases where their radii and luminosities increase by orders of magnitude. 
+Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass; such planets are termed ``Red Giant Hot Jupiters'' (RGHJs) but refer to planets orbiting RGB and AGB stars \citep{spiegel+madhusudhan2012}. 
+Such planets are also subject to interactions with a massive (but slow) stellar wind, as the mass-loss rate of evolved stars is significant, ranging from $\sim  10^{-8} M_\odot$/yr to $\sim  10^{-5} M_\odot$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, thus higher than that of the Sun, $\sim 10^{-14}M_\odot$/yr . 
 On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could also generate bright radio emission. 
 
 Based on this speculation, \citet{ignace2010} examined radio emission from known substellar-mass companions around cool evolved stars. They found that the low ionization fraction of the stellar wind of evolved stars suppresses their radio emission and leads to weak radio emission, probably below the detection limit. 
