--- a/ms.tex
+++ b/ms.tex
@@ -190,15 +190,11 @@ On the assumption that the radio emission is correlated with the stellar wind, p
 
 Based on this speculation, \citet{ignace2010} examined radio emission from known substellar-mass companions around cool evolved stars. They found that the low ionization fraction of the stellar wind of evolved stars suppresses their radio emission and leads to weak radio emission, probably below the detection limit. 
 
-\color{red}
-In this paper, we argue that the accretion of massive stellar wind onto the planets would emit strong X-ray, which can ionize the hydrogen atoms around the planets. The ionized stellar wind could then interact with the planetary magnetic field in the same way as Solar System planets do. 
-We therefore provide optimistic estimates for highly evolved stars, simply extrapolating the radiometric Bode's law. 
-We do not constrain ourselves to the systems known to have sub-stellar companions, given that the survey of exoplanets around highly evolved stars is not complete; rather, we investigate the parameter space where we can search for radio emission and examine the possibility to detect them with current and future instruments. 
-\color{black}
+In this paper, we argue that the accretion of the massive stellar wind onto the planet would emit strong X-rays, thereby ionizing the hydrogen atoms around the planet. The ionized stellar wind would then interact with the planetary magnetic field in the same way as Solar System planets do.  Thus, by extrapolating the radiometric Bode's law, we provide more optimistic estimates for highly evolved stars compared to previous results.  Given that the survey of exoplanets around highly evolved stars is not complete, we do not constrain ourselves to the systems known to have sub-stellar companions.  Instead, we investigate the parameter space where we can search for radio emission and examine the possibility to detect them with current and future instruments. 
 
 
-In \S2, we describe our assumptions for stellar wind, planetary magnetosphere, frequency of radio emission, and the scaling of planetary radio emission.
-\S3 presents an estimate of the spectral radio intensity of RGHJs and compares them with what might be expected from canonical hot Jupiters.
+In \S2, we describe our assumptions for the stellar wind, planetary magnetosphere, frequency of radio emission, and scaling of planetary radio emission.
+\S3 presents an estimate of the spectral radio intensity of RGHJs and compares the predictions with what might be expected from canonical hot Jupiters.
 %\S3 also describes the surprising result that, although the planetary magnetic field is crucial to the generation of radio emission at all, there might be an important region in parameter space in which planets with stronger magnetic fields are less easily observable. 
 \S4 discusses possible obstacles to detect radio emission from RGHJs, in particular the effects of intrinsic radio emission of evolved stars and the offsetting effect of the electrons spiraling down along the planetary magnetic field.
 Observability with current and near-future instruments is also examined in \S4. 
